# xnatio-public

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: patterns.example.json
docs/: add-user-to-groups.md  api-reference.md  apply-label-fixes.md  commands.md  dicom-store-upload.md  onboarding.md  parallel-upload.md  refresh-catalogs.md  rename-subjects-pattern.md  resource-upload-vs-dicom-upload.md
docs/legacy/xnatio-uploader/: README.md  build.py  gui.py  xnatio-uploader-linux-x86_64.spec  xnatio-uploader.spec
tests/: __init__.py  data  test_cli.py  test_config.py  test_exceptions.py  test_logging.py  test_utils.py  test_validation.py  test_xnat_client.py
xnatio/: __init__.py  cli.py  client.py  config.py  label_fixes.py  main.py
xnatio/commands/: __init__.py  admin.py  download.py  maintenance.py  upload.py
xnatio/core/: __init__.py  exceptions.py  logging.py  utils.py  validation.py
xnatio/services/: __init__.py  admin.py  base.py  downloads.py  projects.py  scans.py  uploads.py
xnatio/uploaders/: __init__.py  common.py  constants.py  dicom_store.py  parallel_rest.py
